# geometry-orthogonal-space-search

./: CMakeLists.txt  TODO.md  dokumentacja.pages  presentation.key
cget/cget/: cget.cmake
cget/include/meta/: meta.hpp  meta_fwd.hpp
cget/include/range/v3/: action.hpp  algorithm.hpp  all.hpp  at.hpp  back.hpp  begin_end.hpp  core.hpp  distance.hpp  empty.hpp  front.hpp  getlines.hpp  istream_range.hpp  iterator_range.hpp  numeric.hpp  range_access.hpp  range_concepts.hpp  range_for.hpp  range_fwd.hpp  range_traits.hpp  size.hpp  to_container.hpp  view.hpp  view_adaptor.hpp  view_facade.hpp  view_interface.hpp
cget/include/range/v3/action/: action.hpp  concepts.hpp  drop.hpp  drop_while.hpp  erase.hpp  insert.hpp  join.hpp  push_back.hpp  push_front.hpp  remove_if.hpp  shuffle.hpp  slice.hpp  sort.hpp  split.hpp  stable_sort.hpp  stride.hpp  take.hpp  take_while.hpp  transform.hpp  unique.hpp
cget/include/range/v3/algorithm/: adjacent_find.hpp  all_of.hpp  any_of.hpp  binary_search.hpp  copy.hpp  copy_backward.hpp  copy_if.hpp  copy_n.hpp  count.hpp  count_if.hpp  equal.hpp  (+62 more)
libs/: catch.hpp
libs/gogui/: readme.txt
libs/gogui/example/: compile.sh  line.cpp
libs/gogui/libraries/cpp/: print_json.hpp
src/: ComparableTuple.h  Node.h  Point.h  Random.h  RangeSearchTree.h  RangeSearchTree2D.h  Rect.h  SimpleSearchAlgo2D.h  SortedPoints.h  main.cpp
src/util/: BitmapToProblem.h  Functions.h  PrettyPrintNode.h  PrintUtil.h  SetToString.cpp  SetToString.h  TreeUtils.h  Vectors.h
test/: testRangeSearchTree.cpp  testRangeSearchTree2D.cpp  testSortedPoints.cpp
(+100 files in other folders)
